<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"


>
    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content" android:id="@+id/textLogin"
            tools:ignore="MissingConstraints" android:layout_marginTop="130dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName" android:layout_marginBottom="43dp"
            app:layout_constraintBottom_toTopOf="@+id/textPassword" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="61dp"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content" android:id="@+id/textPassword"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textLogin"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword" android:layout_marginBottom="101dp"
            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="22dp"
            android:layout_marginTop="40dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:hint="@string/saissisez_votre_login"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.169"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toEndOf="@+id/textLogin"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/connexion"
            android:layout_width="387dp"
            android:layout_height="0dp" android:id="@+id/connexion"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            android:layout_marginBottom="360dp"/>
    <Button
            android:text="@string/s_inscrire"
            android:layout_width="0dp"
            android:layout_height="47dp" android:id="@+id/inscription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.578"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:inputType="textPassword"
            android:hint="@string/saissisez_votre_mot_de_passe"
            android:ems="10"
            android:id="@+id/editTextTextPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.271"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toEndOf="@+id/textPassword"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>